--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.5",
+    "@mui/x-charts": "^7.27.0",
     "@tailwindcss/vite": "^4.0.3",
     "lucide-react": "^0.474.0",
     "react": "^18.2.0",
